syntax = "proto3";

package sbot.proto.service;

import "proto/model/attack_targets.proto";

option csharp_namespace = "SBot.Proto.Service";
option go_package = "github.com/sbot/proto/service";
option java_multiple_files = true;
option java_outer_classname = "AttackTargetsService";
option java_package = "com.gbw3bao.sbot.proto.service";
option php_namespace = "SBot\\Proto\\Service";


service AttackTargetsService {

  rpc AddAttackTargets(model.AddAttackTargetsRequest) returns (model.AddAttackTargetsReply){};

  rpc FetchAttackTargets(model.FetchAttackTargetsRequest) returns (model.AttackTargets);

}